--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,10 +124,12 @@ body {
     color: var(--text-color);
     font-weight: var(--font-medium);
 }
-.nav_logo{
+
+.nav_logo {
     width: 120px;
     padding-top: 10px;
 }
+
 .show-menu {
     top: var(--header-height);
 }
@@ -166,6 +168,7 @@ body {
 
 .section-subtitle {
     display: block;
+    font-size: 1.3rem;
     color: var(--primary-color);
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-1);
@@ -265,7 +268,7 @@ body.dark-theme {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.3rem;
+    padding: 0.9rem;
     background: var(--primary-color);
     border-radius: 0.4rem;
     z-index: var(--z-tooltip);
@@ -324,8 +327,9 @@ body.dark-theme {
     transform: scale(1);
     transition: transform 0.3s ease-in-out;
 }
+
 .menu_content:hover {
-    transform: scale(1.10)!important;
+    transform: scale(1.10) !important;
 }
 
 .menu_img {
@@ -348,7 +352,7 @@ body.dark-theme {
 .menu_detail,
 .menu_preci {
     font-size: var(--small-font-size);
-    color: var(--text-color)!important;
+    color: var(--text-color) !important;
     text-align: center;
 }
 
@@ -366,11 +370,11 @@ body.dark-theme {
     border-radius: 99em;
 }
 
-.app_data {
+.social_media_data {
     text-align: center;
 }
 
-.app_description {
+.social_media_description {
     margin-bottom: var(--mb-5);
 }
 
@@ -383,13 +387,13 @@ body.dark-theme {
     color: var(--primary-color);
 }
 
-.app_ {
+.social_media_ {
     width: 120px;
     margin: 0 var(--mb-1);
     font-size: var(--large-font-size);
 }
 
-.app_img {
+.social_media_img {
     width: 230px;
     justify-self: center;
 }
@@ -509,4 +513,30 @@ body.dark-theme {
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.carousel {
+    width: 90%;
+    max-width: 1920px;
+    margin: 0 auto;
+    padding-top: 40px;
+    overflow: hidden;
+  }
+
+  .carousel img {
+    width: 100%;
+    border-radius: 30px;
+    overflow: hidden;
+  }
+
+.slick-next {
+    display: none !important;
+}
+.slick-prev {
+    display: none !important;
+}
+
+.slick-dots li {
+    background-color: var(--primary-color)!important;
+    border-radius: 15px!important;
 }
