Melhoria na página de equipe e melhoria no css

--- a/assets/css/equipe.css
+++ b/assets/css/equipe.css
@@ -10,6 +10,10 @@
     transition: transform 0.3s ease-in-out;
 }
 
+.employee_content_dark{
+    box-shadow: 0px 4px 6px white!important;
+}
+
 .employee_content:hover {
     transform: scale(1.10) !important;
 }
